# Cairn

./: .gitignore  CMakeLists.txt  main.c  makefile
src/: board.c  board.h  boardUtility.c  boardUtility.h  datagen.c  datagen.h  evaluation.c  evaluation.h  move.c  move.h  moveGeneration.c  moveGeneration.h  moveOrderer.c  moveOrderer.h  movepicker.c  movepicker.h  nnue.c  nnue.h  perft.c  perft.h  preComputedData.c  preComputedData.h  search.c  search.h  transposition.c  transposition.h  uci.c  uci.h  utility.c  utility.h  zobrist.c  zobrist.h
